--- a/author/templates/author/all_author.html
+++ b/author/templates/author/all_author.html
@@ -7,11 +7,11 @@
     <table class = 'table table-borderless'>
     <thead class="border-bottom font-weight-bold">
         <tr>
-            <td> name</td>
-            <td>surname</td>
-            <td>patronymic</td>
+            <td> Имя</td>
+            <td>Фамилия</td>
+            <td>Отчество</td>
             <td><a href="{% url 'author:author_insert' %}" class="btn btn-outline-success">
-                <i class="fas fa-plus"></i> Add author
+                <i class="fas fa-plus"></i> Добавить автора
             </a> </td>
             <td> </td>
         </tr>
