--- a/book/templates/book/all_book.html
+++ b/book/templates/book/all_book.html
@@ -7,10 +7,10 @@
     <table class = 'table table-borderless'>
     <thead class="border-bottom font-weight-bold">
         <tr>
-            <td> name</td>
-            <td>description</td>
-            <td>count</td>
-            <td>authors</td>
+            <td> Название книги</td>
+            <td>Описание</td>
+            <td>Количество</td>
+            <td>Список авторов</td>
             <td><a href="{% url 'book:book_insert' %}" class="btn btn-outline-success">
                 <i class="fas fa-plus"></i> Add book
             </a> </td>
