--- a/author/templates/author/all_author.html
+++ b/author/templates/author/all_author.html
@@ -7,11 +7,11 @@
     <table class = 'table table-borderless'>
     <thead class="border-bottom font-weight-bold">
         <tr>
-            <td> Имя</td>
-            <td>Фамилия</td>
-            <td>Отчество</td>
+            <td> Name</td>
+            <td>Last name</td>
+            <td>Patronymic name</td>
             <td><a href="{% url 'author:author_insert' %}" class="btn btn-outline-success">
-                <i class="fas fa-plus"></i> Добавить автора
+                <i class="fas fa-plus"></i> Add author
             </a> </td>
             <td> </td>
         </tr>
@@ -24,14 +24,14 @@
             <td>{{ author.patronymic }}</td>
             <td>
                 <a href="{% url 'author:author_update' author.id %}" class="btn text-secondary px-0">
-                <i class="far fa-edit fa-lg">Изменить</i>
+                <i class="far fa-edit fa-lg">Update</i>
                 </a>
             </td>
             <td>
             <form action="{% url 'author:author_delete' author.id %}" method="post" class="d-inline">
                 {% csrf_token %}
                 <button type="submit" class="btn">
-                    <i class="far fa-trash-alt fa-lg text-danger float-right"> Удалить </i>
+                    <i class="far fa-trash-alt fa-lg text-danger float-right"> Delete</i>
                 </button>
             </form>
          </td>
